Implement byte-code transformation via dynamically attached Java agent and revisit the transformation logic.