@@ -93,29 +93,6 @@ class CounterTest {
 }
 ```
 
-> To use model checking strategy for Java 9 and later, add the following JVM properties:
->
-> ```text
-> --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
-> --add-exports java.base/jdk.internal.util=ALL-UNNAMED
-> ```
->
-> They are required if the testing code uses classes from the `java.util` package since
-> some of them use `jdk.internal.misc.Unsafe` or similar internal classes under the hood.
-> If you use Gradle, add the following lines to `build.gradle.kts`:
->
-> ```
-> tasks.withType<Test> {
->   jvmArgs(
->     "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
->     "--add-exports", "java.base/jdk.internal.util=ALL-UNNAMED",
->     "--add-exports", "java.base/sun.security.action=ALL-UNNAMED"
->   )
-> }
-> ```
->
-{type="tip"}
-
 ### How model checking works {initial-collapse-state="collapsed"}
 
 Most bugs in complicated concurrent algorithms can be reproduced with classic interleavings, switching the execution from
